# sven

./: .gitignore  CMakeLists.txt  main.cpp
src/: Dictionary.cpp  Dictionary.h  Example.h  UString.cpp  UString.h  Utils.h  Word.cpp  Word.h  config.h.in
